--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
     <title>Puruse For Brews</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./style.css">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <div class="jumbotron">
-        <h1 class="display-4">Peruse For Brews</h1>
+    <div class="jumbotron text-white bg-dark">
+        <h1 class="title">Peruse For Brews</h1>
         <p class="lead">It's Simple! Wherever You Are, Find Somewhere To Unwind.</p>
         <hr class="my-4">
         <p>Just Enter Your Location To Start Relaxing</p>
-        <span><a class="btn btn-primary btn-lg" href="#" role="button">Get Started</a></span>
+        <span><a class="btn btn-outline-light" href="#" role="button">Get Started</a></span>
         
-        <span><a class="btn btn-primary btn-lg" href="#" role="button">Learn More</a></span>
+        <span><a class="btn btn-outline-light" href="#" role="button">Learn More</a></span>
       </div> 
 </body>
 </html>
