--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./style.css">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
-
+   
 </head>
 <body>
     <div class="jumbotron text-white bg-dark">
@@ -20,5 +20,6 @@
         
         <span><a class="btn btn-outline-light" href="#" role="button">Learn More</a></span>
       </div> 
+      <script src="app.js"></script>
 </body>
 </html>
