added jquery script access

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <span><a class="btn btn-outline-light" href="pg3.html" id="learn-more" role="button">Learn More</a></span>
       </div> 
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="app.js"></script>
 
 </body>
