--- a/pg2.html
+++ b/pg2.html
@@ -17,7 +17,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                   <div class="navbar-nav">
                     <a class="nav-item nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="./pg2.html">Home</a>
+                    <a class="nav-item nav-link" href="./pg3.html">Get Started</a>
                   </div>
                 </div>
               </nav>
