--- a/pg2.html
+++ b/pg2.html
@@ -10,20 +10,20 @@
 </head>
 <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="./pg3.html">Learn More</a>
+                <a class="navbar-brand" href="./pg3.html">Get Started</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                   <div class="navbar-nav">
                     <a class="nav-item nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="./pg3.html">Get Started</a>
+                    <a class="nav-item nav-link" href="./pg3.html">Learn More</a>
                   </div>
                 </div>
               </nav>
               <div class="jumbotron jumbotron-fluid">
                     <div class="container">
-                      <h1 class="display-4">THIS IS LEARN MORE SORRY TO YELL</h1>
+                      <h1 class="display-4">THIS IS GET STARTED SORRY TO YELL</h1>
                       <p class="lead"></p>
                     </div>
                   </div>
