--- a/pg3.html
+++ b/pg3.html
@@ -10,18 +10,23 @@
 </head>
 <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">Get Started</a>
+                <a class="navbar-brand" href="#">Learn More</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                   <div class="navbar-nav">
                     <a class="nav-item nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="./pg2.html">Learn More</a>
+                    <a class="nav-item nav-link" href="./pg2.html">Get Started</a>
                   </div>
                 </div>
               </nav>
-    <h1>this is page get started</h1>
+              <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                  <h1 class="display-4">THIS IS LEARN MORE SORRY TO YELL</h1>
+                  <p class="lead"></p>
+                </div>
+              </div>
     <script src="app.js"></script>
 </body>
 </html>
