basic html/bootstrap

--- a/LearnMore.html
+++ b/LearnMore.html
@@ -16,22 +16,25 @@
 </head>
 <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="./LearnMore.html">Get Started</a>
+                <a class="navbar-brand" href="./LearnMore.html">Learn More</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                   <div class="navbar-nav">
                     <a class="nav-item nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="./LearnMore.html">Learn More</a>
+                    <a class="nav-item nav-link" href="./peruse.html">Peruse</a>
                   </div>
                 </div>
               </nav>
               <div class="jumbotron jumbotron-fluid">
                     <div class="container">
-                      <h1 class="display-4">THIS IS GET STARTED SORRY TO YELL</h1>
+                      <h1 class="display-4">THIS IS Learn More SORRY TO YELL</h1>
                       <p class="lead"></p>
-                    </div>
+                    </div>                  
+                  </div>
+                  <div>
+                      <h3>this is suff about the app</h3>
                   </div>
                   
     <script src="app.js"></script>
