--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p class="lead">It's Simple! Wherever You Are, Find Somewhere To Unwind.</p>
         <hr class="my-4">
         <p>Just Enter Your Location To Start Relaxing</p>
-        <span><a class="btn btn-outline-light" href="Peruse.html" id="start" role="button">Get Started</a></span>
+        <span><a class="btn btn-outline-light" href="Peruse.html" id="start" role="button">Start Perusin</a></span>
         
         <span><a class="btn btn-outline-light" href="LearnMore.html" id="learn-more" role="button">Learn More</a></span>
       </div> 
