--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Puruse For Brews</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./style.css">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
 
- 
+
     <script src="https://kit.fontawesome.com/393d5a4505.js"></script>
 
 </head>
+
 <body>
     <div class="jumbotron text-white bg-dark">
         <h1 class="title">Peruse For Brews</h1>
@@ -23,11 +26,13 @@
         <hr class="my-4">
         <p>Just Enter Your Location To Start Relaxing</p>
         <span><a class="btn btn-outline-light" href="pg2.html" id="start" role="button">Get Started</a></span>
-        
-        <span><a class="btn btn-outline-light" href="pg3.html" id="learn-more" role="button">Learn More</a></span>
-      </div> 
 
-<script src="app.js"></script>
+        <span><a class="btn btn-outline-light" href="pg3.html" id="learn-more" role="button">Learn More</a></span>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <script src="app.js"></script>
 
 </body>
+
 </html>
