--- a/index.html
+++ b/index.html
@@ -28,10 +28,14 @@
         <hr class="my-4">
         <p>Just Enter Your Location To Start Relaxing</p>
 
- <span><a class="btn btn-outline-light" href="pg2.html" id="start" role="button">Get Started</a></span>
+ <span><a class="btn btn-outline-light" href="Peruse.html" id="start" role="button">Get Started</a></span>
 
-        <span><a class="btn btn-outline-light" href="pg3.html" id="learn-more" role="button">Learn More</a></span>
+        <span><a class="btn btn-outline-light" href="LearnMore.html" id="learn-more" role="button">Learn More</a></span>
     </div>
+
+
+<!--age verifcation modal-->
+          
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <script src="app.js"></script>
