--- a/Peruse.html
+++ b/Peruse.html
@@ -18,56 +18,117 @@
 </head>
 
 <body>
+
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Peruse</a>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup"> 
+
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" href="./LearnMore.html">Learn More</a>
       </div>
     </div>
   </nav>
+
   <div class="jumbotron jumbotron-fluid">
-    <h1 class="display-4">Peruse</h1>
-    <p class="lead"></p>
+    <h1 class="display-4">Let's Peruse</h1>
+    <p class="lead">Still Can't Choose? Try The Reviews! </p>
   </div>
+
   <div class="container">
-    <form>
+    <div class="row">
+      <div class="col-md-4">
+        <form>
 
-        <div class="form-group">
-            <label for="exampleInputCity">City</label>
-            <input type="password" class="form-control" id="exampleInputCity" placeholder="City">
+          <label for="city">City</label>
+          <input type="text" class="form-control" id="city-input" placeholder="City" required>
+          <div class="invalid-feedback">
+            Please provide a valid city.
           </div>
 
-      <div class="form-group">
-        <label for="exampleInputState">Select State</label>
-        <input type="state" class="form-control" id="exampleInputState" aria-describedby="stateHelp"
-          placeholder="Enter state">
-        <small id="stateHelp" class="form-text text-muted">We can add text here if we want to share with the user.</small>
-      </div>
+          <label for="state">State</label>
+          <select type="text" class="form-control" id="state-input" required>
+            <option placeholder="State"></option>
+            <option value="AL">Alabama</option>
+            <option value="AK">Alaska</option>
+            <option value="AZ">Arizona</option>
+            <option value="AR">Arkansas</option>
+            <option value="CA">California</option>
+            <option value="CO">Colorado</option>
+            <option value="CT">Connecticut</option>
+            <option value="DE">Delaware</option>
+            <option value="DC">District Of Columbia</option>
+            <option value="FL">Florida</option>
+            <option value="GA">Georgia</option>
+            <option value="HI">Hawaii</option>
+            <option value="ID">Idaho</option>
+            <option value="IL">Illinois</option>
+            <option value="IN">Indiana</option>
+            <option value="IA">Iowa</option>
+            <option value="KS">Kansas</option>
+            <option value="KY">Kentucky</option>
+            <option value="LA">Louisiana</option>
+            <option value="ME">Maine</option>
+            <option value="MD">Maryland</option>
+            <option value="MA">Massachusetts</option>
+            <option value="MI">Michigan</option>
+            <option value="MN">Minnesota</option>
+            <option value="MS">Mississippi</option>
+            <option value="MO">Missouri</option>
+            <option value="MT">Montana</option>
+            <option value="NE">Nebraska</option>
+            <option value="NV">Nevada</option>
+            <option value="NH">New Hampshire</option>
+            <option value="NJ">New Jersey</option>
+            <option value="NM">New Mexico</option>
+            <option value="NY">New York</option>
+            <option value="NC">North Carolina</option>
+            <option value="ND">North Dakota</option>
+            <option value="OH">Ohio</option>
+            <option value="OK">Oklahoma</option>
+            <option value="OR">Oregon</option>
+            <option value="PA">Pennsylvania</option>
+            <option value="RI">Rhode Island</option>
+            <option value="SC">South Carolina</option>
+            <option value="SD">South Dakota</option>
+            <option value="TN">Tennessee</option>
+            <option value="TX">Texas</option>
+            <option value="UT">Utah</option>
+            <option value="VT">Vermont</option>
+            <option value="VA">Virginia</option>
+            <option value="WA">Washington</option>
+            <option value="WV">West Virginia</option>
+            <option value="WI">Wisconsin</option>
+            <option value="WY">Wyoming</option>
+          </select>
+          <br>
+          <button id="search" type="submit" class="btn btn-primary">Submit</button>
+      </form>
+      <button id="search" type="submit" class="btn btn-primary">Reviews</button>
 
-      <div class="form-group form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check for Reviews Maybe?</label>
-      </div>
+    </div>
 
-      <button type="submit" class="btn btn-primary">Search</button>
-    </form>
-
-        <!--MO: Added card with a link to LYFT, probably needs to be redone-->
-
-        <div class="card" style="width: 18rem;">
-            <img src="https://media.licdn.com/dms/image/C4E1BAQEC6j5sG-J1cQ/company-background_10000/0?e=2159024400&v=beta&t=zOfzITfEW_ekk9F5fxRRUTTX4qiAvLmrrVUbFlxc5hg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text">Need a Lyft?</p>
-              <a href="https://www.lyft.com/rider" class="card-link">Lyft</a>
+  <!-- to do: animate results, do something with lift, add reviews effect -->>
+  <div class="col-md-5">
+    <div id="results" class="card">
+      <div class="card-body">
+          <div class="card" style="width: 18rem;">
+              <img
+                src="https://media.licdn.com/dms/image/C4E1BAQEC6j5sG-J1cQ/company-background_10000/0?e=2159024400&v=beta&t=zOfzITfEW_ekk9F5fxRRUTTX4qiAvLmrrVUbFlxc5hg"
+                class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">Need a Lyft?</p>
+                <a href="https://www.lyft.com/rider" class="card-link">Lyft</a>
+              </div>
             </div>
-          </div>
-</div>
+      </div>
+    </div>
+  </div>
 
   
   <script src="app.js"></script>
