--- a/Peruse.html
+++ b/Peruse.html
@@ -109,11 +109,12 @@
           <br>
           <button id="search" type="submit" class="btn btn-primary">Submit</button>
       </form>
+      <br>
       <button id="search" type="submit" class="btn btn-primary">Reviews</button>
 
     </div>
 
-  <!-- to do: animate results, do something with lift, add reviews effect -->>
+  <!-- to do: animate results, do something with lift, add reviews effect -->
   <div class="col-md-5">
     <div id="results" class="card">
       <div class="card-body">
