updated the code for the drop down

--- a/Peruse.html
+++ b/Peruse.html
@@ -87,7 +87,7 @@
             <option value="NJ">New Jersey</option>
             <option value="NM">New Mexico</option>
             <option value="NY">New York</option>
-            <option value="NC">North Carolina</option>
+            <option value="NC">North_Carolina</option>
             <option value="ND">North Dakota</option>
             <option value="OH">Ohio</option>
             <option value="OK">Oklahoma</option>
