added location function

--- a/Peruse.html
+++ b/Peruse.html
@@ -54,7 +54,9 @@
     <div class="row">
       <div class="col-md-4">
 
-      <span><button id="search" type="submit" class="btn btn-primary">Get Location</button></span>  <span><button id="search" type="submit" class="btn btn-primary">Reviews</button></span>  
+      <span><button  id="getLocation" type="submit" class="btn btn-primary">Get Location</button>
+      <div id="demo"></div>
+      </span>  <span><button id="search" type="submit" class="btn btn-primary">Reviews</button></span>  
         
       </div>
       <div class="col-md-8">
