--- a/Peruse.html
+++ b/Peruse.html
@@ -40,7 +40,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="./LearnMore.html">Learn More</a>
+        <a class="nav-item nav-link" href="LearnMore.html">Learn More</a>
       </div>
     </div>
   </nav>
