--- a/index.html
+++ b/index.html
@@ -11,18 +11,15 @@
     <link rel="stylesheet" type="text/css" href="./style.css">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
-    integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
-    integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
-    crossorigin="anonymous"></script>
-
-
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
+        integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
+        integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
     <script src="https://kit.fontawesome.com/393d5a4505.js"></script>
 
 </head>
@@ -39,49 +36,49 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
-
-                    <span><button id="search" type="submit" class="btn btn-outline-light">Get Location</button></span>
-                    <span><button id="search" type="submit" class="btn btn-outline-light">Reviews</button></span>
-
-                </div>
-
+                <span><button id="search" type="submit" class="btn btn-outline-light">Get Started</button></span>
+                <span><a href="LearnMore.html" id="learn" role="button"
+                        class="btn btn-outline-light">Learn More</a></span>
             </div>
         </div>
     </div>
-    <div class="col-md-8">
-        <div id="results" class="card">
-            <div class="card-body">
-                <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModal">
-                    Need A Lyft? </button>
-                <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
-                    aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Cruise For Brews</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                <div class="card" style="width: 18rem;">
-                                    <img src="https://media.licdn.com/dms/image/C4E1BAQEC6j5sG-J1cQ/company-background_10000/0?e=2159024400&v=beta&t=zOfzITfEW_ekk9F5fxRRUTTX4qiAvLmrrVUbFlxc5hg"
-                                        class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                        <a href="https://www.lyft.com/rider" class="card-link">Lyft</a>
-                                    </div>
+
+    <div id="results" class="card">
+        <div class="card-body">
+            <div>
+                <span><button id="getLocation" type="submit" class="btn btn-outline-light">Get Location</button></span>
+                <span><button id="review" type="submit" class="btn btn-outline-light">Reviews</button></span>
+            </div>
+            <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModal">
+                Need A Lyft? </button>
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Cruise For Brews</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="card" style="width: 18rem;">
+                                <img src="https://media.licdn.com/dms/image/C4E1BAQEC6j5sG-J1cQ/company-background_10000/0?e=2159024400&v=beta&t=zOfzITfEW_ekk9F5fxRRUTTX4qiAvLmrrVUbFlxc5hg"
+                                    class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <a href="https://www.lyft.com/rider" class="card-link">Lyft</a>
                                 </div>
                             </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">No Thanks!</button>
-                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">No Thanks!</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
     <!--age verifcation modal-->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
