adding p element to card to list results

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <body>
     <div class="jumbotron text-white bg-dark">
         <h1 class="title">Peruse For Brews</h1>
-        <div class="fa-4x">
-            <i class="fas fa-beer fa-spin"></i>
+        <div class="fa-x">
+            <i class="fas fa-beer fa-pulse"></i>
         </div>
         <p class="lead">It's Simple! Wherever You Are, Find Somewhere To Unwind.</p>
         <hr class="my-4">
