--- a/Peruse.html
+++ b/Peruse.html
@@ -50,11 +50,11 @@
     <p class="lead">Still Can't Choose? Try The Reviews! </p>
   </div>
 
-<<<<<<< HEAD
+
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-<<<<<<< HEAD
+
         <form>
 
           <label for="city">City</label>
@@ -150,6 +150,7 @@
                         class="card-img-top" alt="...">
                       <div class="card-body">
                         <a href="https://www.lyft.com/rider" class="card-link">Lyft</a>
+                        <p class="card-text"></p>
                       </div>
                     </div>
                   </div>
