added to learn more

--- a/LearnMore.html
+++ b/LearnMore.html
@@ -23,18 +23,23 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                   <div class="navbar-nav">
                     <a class="nav-item nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="./peruse.html">Peruse</a>
                   </div>
                 </div>
               </nav>
               <div class="jumbotron jumbotron-fluid">
                     <div class="container">
-                      <h1 class="display-4">THIS IS Learn More SORRY TO YELL</h1>
-                      <p class="lead"></p>
+                      <h1 class="display-4">Beer Me</h1>
+                      <p class="lead">This app was made by five cicerones based in Charlotte, NC tyring to figure out how to code while dreaming of self medicating post class over a brewskey.
+                         Allow the app to use your location to reveal the five closest breweries you. Go out, chug responsibly, make freinds with a stranger, tip the bartender, and grab a uber. Safe home.</p>
                     </div>                  
                   </div>
                   <div>
-                      <h3>this is suff about the app</h3>
+                      <h3>Cicerones recomendations in the Charlotte, NC area:</h3>
+                      <li>Pat (favors lagers): The Good Bottle Company</li>
+                      <li>Morgan (favors wheats): Resident Culture</li>
+                      <li>Nick (favors wheats): Cabarrus County Brewery</li>
+                      <li>Madison (favors stouts and sours): Bold Missy</li>
+                      <li>Carlo (lame ass mf who doesnt drink but kinda likes IPAs): anywhere, it's an IPA kind of town</li>
                   </div>
                   
     <script src="app.js"></script>
