--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     <div class="jumbotron text-white bg-dark">
         <h1 class="title">Peruse For Brews</h1>
-        <div class="fa-x">
+        <div class="fa-4x">
             <i class="fas fa-beer fa-pulse"></i>
         </div>
         <p class="lead">It's Simple! Wherever You Are, Find Somewhere To Unwind.</p>
@@ -36,9 +36,8 @@
 
         <div class="container">
             <div class="row">
-                <span><button id="search" type="submit" class="btn btn-outline-light">Get Started</button></span>
-                <span><a href="LearnMore.html" id="learn" role="button"
-                        class="btn btn-outline-light">Learn More</a></span>
+                              <span><a href="LearnMore.html" id="learn" role="button"
+                        class="btn btn-outline-light" class="mx-auto">Learn More</a></span>
             </div>
         </div>
     </div>
@@ -50,7 +49,7 @@
                 <span><button id="review" type="submit" class="btn btn-outline-light">Reviews</button></span>
             </div>
             <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModal">
-                Need A Lyft? </button>
+                Get a DD! </button>
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog" role="document">
@@ -61,14 +60,11 @@
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
-                        <div class="modal-body">
-                            <div class="card" style="width: 18rem;">
-                                <img src="https://media.licdn.com/dms/image/C4E1BAQEC6j5sG-J1cQ/company-background_10000/0?e=2159024400&v=beta&t=zOfzITfEW_ekk9F5fxRRUTTX4qiAvLmrrVUbFlxc5hg"
-                                    class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <a href="https://www.lyft.com/rider" class="card-link">Lyft</a>
-                                </div>
-                            </div>
+                        <div class="modal-body"> 
+                                    <i class="fab fa-uber" style="font-size: 80px;" href= ""class="card-link"
+                                    class="card-img-top" alt="..."></i>
+                               <p>    Uber</p>                                
+                            
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">No Thanks!</button>
