--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Puruse For Brews</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+    <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./style.css">
@@ -25,32 +27,39 @@
 </head>
 
 <body>
+    <div id="section1">
     <div class="jumbotron text-white bg-dark">
         <h1 class="title">Peruse For Brews</h1>
-        <div class="fa-4x">
-            <i class="fas fa-beer fa-spin"></i>
-        </div>
-        <p class="lead">It's Simple! Wherever You Are, Find Somewhere To Unwind.</p>
+                   <p class="lead">It's Simple! Wherever You Are, Find Somewhere To Unwind.</p>
+                   <body>
+
+                        <div id="container">
+                        <div class="glass">
+                          <div class="beer"></div>
+                        </div>
+                        <div class="head"></div>
+                        <div class="pour"></div>
+                      </div>
         <hr class="my-4">
         <p>Just Enter Your Location To Start Relaxing</p>
 
         <div class="container">
-            <div class="row">
-                <span><button id="search" type="submit" class="btn btn-outline-light">Get Started</button></span>
+                <span><a id="start" href="#section2" role="button" class="btn btn-outline-light">Get Started</a>
                 <span><a href="LearnMore.html" id="learn" role="button"
                         class="btn btn-outline-light">Learn More</a></span>
-            </div>
         </div>
     </div>
-
+</div>
+<div id="section2">
     <div id="results" class="card">
         <div class="card-body">
             <div>
-                <span><button id="getLocation" type="submit" class="btn btn-outline-light">Get Location</button></span>
-                <span><button id="review" type="submit" class="btn btn-outline-light">Reviews</button></span>
+                <span><button id="getLocation" type="submit" class="btn btn-dark">Get Location</button></span>
+                <span><button id="review" type="submit" class="btn btn-dark">Reviews</button></span>
             </div>
-            <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModal">
+            <button id="lyft"type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#exampleModal">
                 Need A Lyft? </button>
+
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog" role="document">
@@ -78,7 +87,7 @@
             </div>
         </div>
     </div>
-
+</div>
     <!--age verifcation modal-->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
