fonts/content learn more, but incompelte

--- a/LearnMore.html
+++ b/LearnMore.html
@@ -2,39 +2,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./style.css">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Karla&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
+        integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
+        integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/393d5a4505.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="./style.css">
     <title>Peruse For Brews||Learn More</title>
 </head>
 <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="./LearnMore.html">Learn More</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                  <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a>
-                  </div>
-                </div>
-              </nav>
-              <div class="jumbotron jumbotron-fluid">
+              <div class="jumbotron jumbotron-fluid bg-dark text-white">
                     <div class="container">
-                      <h1 class="display-4">Beer Me</h1>
+                      <h1 class="title">Beer Me</h1>
                       <p class="lead">This app was made by five cicerones based in Charlotte, NC tyring to figure out how to code while dreaming of self medicating post class over a brewskey.
-                         Allow the app to use your location to reveal the five closest breweries you. Go out, chug responsibly, make freinds with a stranger, tip the bartender, and grab a uber. Safe home.</p>
-                    </div>                  
+                         Allow the app to use your location to reveal the five closest breweries you. Go out, chug responsibly, make strangers friends, tip the bartender, and grab a uber. Safe home.</p>
+                    </div>  
+                    <div class="container">
+                        <div class="row">
+                                          <span><a href="index.html" id="peruse" role="button"
+                                    class="btn btn-outline-light" class="mx-auto">back to brews</a></span>
+                                    </div>
+                    </div>                
                   </div>
-                  <div>
-                      <h3>Cicerones recomendations in the Charlotte, NC area:</h3>
+
+                  <div class= "people">
+                      <h3>Recomendations in the Charlotte, NC area:</h3>
                       <li>Pat (favors lagers): The Good Bottle Company</li>
                       <li>Morgan (favors wheats): Resident Culture</li>
                       <li>Nick (favors wheats): Cabarrus County Brewery</li>
