fixed card layouts on learn more page

--- a/LearnMore.html
+++ b/LearnMore.html
@@ -94,50 +94,50 @@
 
   <div class="card-deck">
     <div class="card">
+        <div class="card-img">
       <img src="
       https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/294453_270616183054820_1915216540_n.jpg?_nc_cat=105&_nc_oc=AQm_OiaKGH4VobkVKjZdNGPhrklxt1isSvtpo3hpja5BvBC_0UWxAHeuDhgLgFpOcMWVusstnwLmw-DmEiR8P2fr&_nc_ht=scontent-iad3-1.xx&oh=1730c2acc5e1b5e1a4844808fba725f4&oe=5DC96BD1"
       class="rounded-circle"  alt="...">
-      <div class="card-img-overlay">
+     
         <h5 class="card-title">Pat</h5>
-        <p class="card-text">Type: Lover of Lagers.<br> Recomends: The Good Bottle Company</p>
+        <p class="card-text-center font-weight-bold">Type: Lager Lover<br> Recs: The Good Bottle Company</p>
       </div>
     </div>
     <div class="card">
+        <div class="card-img">
       <img
         src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/33729390_2143062225925342_4145944880155197440_n.jpg?_nc_cat=107&_nc_oc=AQk9c0QMHjvPyaPt2yreK6PQBHU-SiFnKQKlOY6aEFOpalzOeuqI4Ws6dpv8iq7wgRTdHAMkK4uI4CxzGRvDQGyY&_nc_ht=scontent-iad3-1.xx&oh=53c50f1c77311755f00386f6d237c8ec&oe=5DFDD336"
         class="rounded-circle"  alt="...">
-        <div class="card-img-overlay">
         <h5 class="card-title">Morgan</h5>
-        <p class="card-text">Type: Drink your Wheaties.<br> Recomends: Resident Culture</p>
+        <p class="card-text-center font-weight-bold">Type: Drink your Wheaties<br> Recs: Resident Culture</p>
       </div>
     </div>
-    <div class="card">
-      <img
-        src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/1453355_472702116271235_427941930228698884_n.jpg?_nc_cat=100&_nc_oc=AQmkYbBJMTreo3weHunfIGNGneZu-lfvXc-O2ipyBUAaQC2lUg72EEZRpsfe6tgFxe3fD6sw67suwmTQLxLhc0E7&_nc_ht=scontent-iad3-1.xx&oh=29337df9cd1bbdeef88731e487b05dce&oe=5E09EC40"
-        class="rounded-circle" alt="...">
-        <div class="card-img-overlay">
-        <h5 class="card-title">Nick</h5>
-        <p class="card-text">Type: Drink your Wheaties part 2.<br> Recomends: Cabarrus Brewing Co</p>
-      </div>
-    </div>
-    <div class="card">
+        <div class="card">
+        <div class="card-img">
       <img src="
       https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/13533282_1073574106063424_5040701104773278568_n.jpg?_nc_cat=105&_nc_oc=AQk_vN9y4P6j2rwaAZx676HYvSpixz-YdWlHPJ62MX7oGNRlSyVSclT0b9-m-3mAiEugllIOWgy9jwCH0StHR6yz&_nc_ht=scontent-iad3-1.xx&oh=243ece4f3d61c2445b42f9d97e2da91c&oe=5E0A3DB1"
       class="rounded-circle" alt="...">
-      <div class="card-img-overlay">
         <h5 class="card-title">Madison</h5>
-        <p class="card-text">Type: The Black Stuff and the sour stuff.<br> Recomends: Bold Missy</p>
+        <p class="card-text-center font-weight-bold">Type: Black Stuff & sour stuff<br> Recs: Bold Missy</p>
 
       </div>
     </div>
     <div class="card">
+        <div class="card-img">
       <img
         src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/19601067_875930079241513_4129494452664089995_n.jpg?_nc_cat=107&_nc_oc=AQk6vhjOVYralsvSEY1gU-bpob24_W3ZyyJ6vvv84Z1gHVhtLlYRKo_MnKrOjHZrnB74ZOQPPQ7VYQAAF5z6M00Q&_nc_ht=scontent-iad3-1.xx&oh=a177348445b15c9b247a8ed7160870ce&oe=5E0488E2"
         class="rounded-circle"alt="...">
-        <div class="card-img-overlay">
         <h5 class="card-title">Carlo</h5>
-        <p class="card-text">Type: lame ass mf who doesnt drink but kinda likes IPAs.<br> Recomends: any brewery, it's
-          an IPA kind of town, but "I've been to Sycamore'"</p>
+        <p class="card-text-center font-weight-bold">Type: Our go to DD, but kinda likes IPAs<br> Recs: "I've been to Sycamore'"</p>
+      </div>
+    </div>
+    <div class="card">
+        <div class="card-img">
+      <img
+        src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/1453355_472702116271235_427941930228698884_n.jpg?_nc_cat=100&_nc_oc=AQmkYbBJMTreo3weHunfIGNGneZu-lfvXc-O2ipyBUAaQC2lUg72EEZRpsfe6tgFxe3fD6sw67suwmTQLxLhc0E7&_nc_ht=scontent-iad3-1.xx&oh=29337df9cd1bbdeef88731e487b05dce&oe=5E09EC40"
+        class="rounded-circle" alt="...">
+        <h5 class="card-title">Nick</h5>
+        <p class="card-text-center font-weight-bold">Type: Drink your Wheaties pt. 2<br> Recs: Cabarrus Brewing Co</p>
       </div>
     </div>
   </div>
