--- a/LearnMore.html
+++ b/LearnMore.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -20,30 +20,39 @@
     <script src="https://kit.fontawesome.com/393d5a4505.js"></script>
     <title>Peruse For Brews||Learn More</title>
 </head>
-<body>
-              <div class="jumbotron jumbotron-fluid bg-dark text-white">
-                    <div class="container">
-                      <h1 class="title">Beer Me</h1>
-                      <p class="lead">This app was made by five cicerones based in Charlotte, NC tyring to figure out how to code while dreaming of self medicating post class over a brewskey.
-                         Allow the app to use your location to reveal the five closest breweries you. Go out, chug responsibly, make strangers friends, tip the bartender, and grab a uber. Safe home.</p>
-                    </div>  
-                    <div class="container">
-                        <div class="row">
-                                          <span><a href="index.html" id="peruse" role="button"
-                                    class="btn btn-outline-light" class="mx-auto">back to brews</a></span>
-                                    </div>
-                    </div>                
-                  </div>
 
-                  <div class= "people">
-                      <h3>Recomendations in the Charlotte, NC area:</h3>
-                      <li>Pat (favors lagers): The Good Bottle Company</li>
-                      <li>Morgan (favors wheats): Resident Culture</li>
-                      <li>Nick (favors wheats): Cabarrus County Brewery</li>
-                      <li>Madison (favors stouts and sours): Bold Missy</li>
-                      <li>Carlo (lame ass mf who doesnt drink but kinda likes IPAs): anywhere, it's an IPA kind of town</li>
-                  </div>
-                  
+<body>
+    <div class="jumbotron jumbotron-fluid bg-dark text-white">
+        <div class="container">
+            <h1 class="title">Beer Me</h1>
+            <p text-align='center' class="lead">This app was made by five cicerones based in Charlotte, NC tyring to figure out how to code
+                while dreaming of self medicating post class over a brewskey.
+                Allow the app to use your location to reveal the five closest breweries you. Go out, chug responsibly,
+                make strangers friends, tip the bartender, and grab a uber. Safe home.</p>
+        </div>
+        <div class="container">
+            <div class="row">
+                <span><a href="index.html" id="peruse" role="button" class="btn btn-outline-light" class="mx-auto">ok, I'm in</a></span>
+            </div>
+        </div>
+    </div>
+<br>
+    <div class="card" id='learnMore'>
+        <div class="card-body">
+            <div class="card-title">
+                <h3>Recomendations in the Charlotte, NC area:</h3>
+            </div>
+                <div class="people">
+                <li>Pat (favors lagers): The Good Bottle Company</li>
+                <li>Morgan (favors wheats): Resident Culture</li>
+                <li>Nick (favors wheats): Cabarrus County Brewery</li>
+                <li>Madison (favors stouts and sours): Bold Missy</li>
+                <li>Carlo (lame ass mf who doesnt drink but kinda likes IPAs): anywhere, it's an IPA kind of town</li>
+            </div>
+        </div>
+    </div>
+
     <script src="app.js"></script>
 </body>
+
 </html>
