--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 
             <p class="lead">It's Simple! Wherever You Are, Find Somewhere To Unwind.</p>
 
-
             <div id="container">
                 <div class="glass">
                     <div class="beer"></div>
@@ -43,72 +42,14 @@
             </div>
 
         </div>
-        <br>
-        <br>
-        <div id="section2">
-            <div id="results" class="card">
-                <div class="card-body">
-                    <div>
-                        <button id="getLocation" type="submit" class="btn btn-dark">Get Location</button>
-                        <button id="review" type="submit" class="btn btn-dark">Reviews</button>
-                       <button id="lyft" type="button" class="btn btn-outline-dark" data-toggle="modal"
-                            data-target="#exampleModal">
-                            Need A Lyft? </button>
-                    </div>
-                        <br>
-                        <div id="bar"></div>
-                        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
-                            aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">Cruise For Brews</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-
-                                    <div class="modal-body">
-                                        <div class="card" style="width: 18rem;">
-                                            <img src="https://media.licdn.com/dms/image/C4E1BAQEC6j5sG-J1cQ/company-background_10000/0?e=2159024400&v=beta&t=zOfzITfEW_ekk9F5fxRRUTTX4qiAvLmrrVUbFlxc5hg"
-                                                class="card-img-top" alt="...">
-                                            <div class="card-body">
-                                                <a href="https://www.lyft.com/rider" class="card-link">Lyft</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">No
-                                            Thanks!</button>
-                                    </div>
-                                </div>
-
-
-            <div id="container">
-                <div class="glass">
-                    <div class="beer"></div>
-                </div>
-                <div class="head"></div>
-                <div class="pour"></div>
-            </div>
-
-            <p class="lead">It's Simple! Wherever You Are, Find Somewhere To Unwind.</p>
-
-                       <div class="container">
-
-                <span><a id="start" href="#section2" role="button" class="btn btn-outline-light">Start</a>
-                    <span><a href="LearnMore.html" id="learn" role="button" class="btn btn-outline-light">Learn
-                            More</a></span>
-
-            </div>
-        </div>
     </div>
+    <br>
     <div id="section2">
         <div id="results" class="card">
             <div class="card-body">
-                    <h5 class="card-title">Click 'Get Location' To Start Relaxing</h5>
                 <div>
-                    <span><button id="getLocation" type="submit" class="btn btn-dark">Get Location</button></span>
+                    <span><button id="getLocation" type="submit" class="btn btn-dark">Get
+                            Location</button></span>
                     <span><button id="review" type="submit" class="btn btn-dark">Reviews</button></span>
                 </div>
 
@@ -133,7 +74,8 @@
 
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">No Thanks!</button>
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">No
+                                    Thanks!</button>
 
                             </div>
                         </div>
@@ -146,9 +88,9 @@
     <!--age verifcation modal-->
 
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-        <script src="app.js"></script>
+    <script src="app.js"></script>
 
 
 </body>
